--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -194,7 +194,7 @@
 }
 .login-main{
     position: fixed;
-    top: 0;
+    top: 20%;
     right: 0;
     bottom: 0;
     left: 0;
@@ -208,6 +208,7 @@
     font-size: 30px;
     font-weight: 100;
     text-align: center;
+    color: #fff;
 }
 .login-main header, .login-main form, .login-main form .layui-input-inline {
     margin-bottom: 15px;
